--- a/Jarvis/app/src/main/res/layout/activity_main.xml
+++ b/Jarvis/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
     <android.support.design.widget.FloatingActionButton
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:contentDescription="@string/add_applet"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
