widget, admob added

--- a/Jarvis/app/src/main/res/layout/applet_listing_holder.xml
+++ b/Jarvis/app/src/main/res/layout/applet_listing_holder.xml
@@ -20,7 +20,7 @@
         android:layout_height="160dp"
         android:gravity="center"
         android:padding="5dp"
-        android:text="Applet Title"
+        android:text="@string/applet_title"
         android:background="@color/colorPrimary"
         android:textColor="#FFF"
         android:textSize="24sp"
@@ -40,7 +40,7 @@
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
             android:layout_alignParentEnd="true"
-            android:text="OFF"
+            android:text="@string/applet_off"
             android:paddingEnd="10dp"
             android:switchPadding="10dp"
             android:includeFontPadding="true"
