--- a/Jarvis/app/src/main/res/layout/battery_situation_creator.xml
+++ b/Jarvis/app/src/main/res/layout/battery_situation_creator.xml
@@ -8,8 +8,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Battery drops to 15%"
-        android:contentDescription="BATTERY DROPS TO 15%"
+        android:text="@string/battery_drops_to_15"
+        android:contentDescription="@string/battery_drops_to_15_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
@@ -22,8 +22,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Device Plugged in"
-        android:contentDescription="DEVICE PLUGGED"
+        android:text="@string/device_plugged_in"
+        android:contentDescription="@string/device_plugged_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
@@ -36,8 +36,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Device Unplugged"
-        android:contentDescription="DEVICE UNPLUGGED"
+        android:text="@string/device_unplugged"
+        android:contentDescription="@string/device_unplugged_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
