--- a/Jarvis/app/src/main/res/layout/bluetooth_action.xml
+++ b/Jarvis/app/src/main/res/layout/bluetooth_action.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:text="Bluetooth"
+        android:text="@string/bluetooth"
         android:drawableLeft="@drawable/ic_bluetooth"
         android:drawablePadding="10dp"
         android:textSize="20sp"
@@ -26,8 +26,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Turn Bluetooth On"
-        android:contentDescription="TURN BLUETOOTH ON"
+        android:text="@string/turn_bluetooth_on"
+        android:contentDescription="@string/turn_bluetooth_on_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
@@ -40,8 +40,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Turn Bluetooth Off"
-        android:contentDescription="TURN BLUETOOTH OFF"
+        android:text="@string/turn_bluetooth_off"
+        android:contentDescription="@string/turn_bluetooth_off_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
