--- a/Jarvis/app/src/main/res/layout/headphone_situation_creator.xml
+++ b/Jarvis/app/src/main/res/layout/headphone_situation_creator.xml
@@ -8,8 +8,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Headphone Plugged"
-        android:contentDescription="HEADPHONES PLUGGED"
+        android:text="@string/headphone_plugged"
+        android:contentDescription="@string/headphones_plugged_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
@@ -22,8 +22,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Headphones Unplugged"
-        android:contentDescription="HEADPHONES UNPLUGGED"
+        android:text="@string/headphones_unplugged"
+        android:contentDescription="@string/headphones_unplugged_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
