--- a/Jarvis/app/src/main/res/layout/wifi_action.xml
+++ b/Jarvis/app/src/main/res/layout/wifi_action.xml
@@ -7,7 +7,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center"
-        android:text="WiFi"
+        android:text="@string/wifi"
         android:drawableLeft="@drawable/ic_wifi"
         android:drawablePadding="10dp"
         android:textSize="20sp"
@@ -26,8 +26,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Turn WiFi On"
-        android:contentDescription="TURN WIFI ON"
+        android:text="@string/turn_wifi_on"
+        android:contentDescription="@string/turn_wifi_on_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
@@ -40,8 +40,8 @@
         android:layout_height="50dp"
         android:background="#f54"
         android:layout_gravity="center"
-        android:text="Turn WiFi Off"
-        android:contentDescription="TURN WIFI OFF"
+        android:text="@string/turn_wifi_off"
+        android:contentDescription="@string/turn_wifi_off_desc"
         android:textColor="#FFF"
         android:textSize="22sp"
         android:gravity="center"
