--- a/Jarvis/app/src/main/res/layout/applet_preview.xml
+++ b/Jarvis/app/src/main/res/layout/applet_preview.xml
@@ -20,7 +20,7 @@
         android:id="@+id/notification_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Receive Notification when applet runs"
+        android:text="@string/notification_checkbox_text"
         android:layout_gravity="center"
         android:textSize="18sp"
         android:layout_marginTop="20dp"/>
@@ -34,5 +34,5 @@
         android:layout_marginTop="20dp"
         android:textSize="20sp"
         android:textColor="#FFF"
-        android:text="Finish"/>
+        android:text="@string/applet_finish"/>
 </LinearLayout>
