--- a/Jarvis/app/src/main/res/layout/activity_main.xml
+++ b/Jarvis/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom|center"
         ads:adSize="BANNER"
         ads:adUnitId="@string/ad_id"/>
 </FrameLayout>
